@@ -2,7 +2,7 @@ sg3-utils (1.37-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 28 Aug 2013 16:00:00 +0200
+ -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 07 Sep 2013 06:00:00 -0400
 
 sg3-utils (1.36-0.1) unstable; urgency=low
 
